refactor: user id to uuid and tests added